5.deployments/manifests/2-app-foo.yml
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  #namespace: apps
  labels:
    app: foo
spec:
  containers:
  - command:
    - /agnhost
    - serve-hostname
    - --http=true
    - --port=8080
    image: registry.k8s.io/e2e-test-images/agnhost:2.39
    name: foo-app

---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
  #namespace: apps
spec:
  selector:
    app: foo
  ports:
  # Default port used by the image
  - port: 8080
