5.deployments/manifests/3-app-bar.yml
kind: Service
apiVersion: v1
metadata:
  name: bar-service
  #namespace: apps
spec:
  selector:
    app: bar
  ports:
  - port: 8080
