5.deployments/manifests/5-ingress-apps.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: web
  #namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  tls:
  - hosts:
      - apps.127.0.0.1.nip.io
    secretName: https-certs

  rules:
  - host: apps.127.0.0.1.nip.io

    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: foo-service
            port:
              number: 8080

      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: bar-service
            port:
              number: 8080

      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
